Bug 185588: Changed printing preferences are saved corrupted in prefs.js. Author=Roland.Mainz@informatik.med.uni-giessen.de, r=smontagu, sr=roc+moz